--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ django-environ = "^0.4.5"
 bleach = "^3.3.0"
 Markdown = "^3.3.4"
 wagtail-localize = "^0.9.5"
+html2text = "^2020.1.16"
 
 [tool.poetry.dev-dependencies]
 
