--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,34 @@ html2text = "^2020.1.16"
 [tool.poetry.dev-dependencies]
 pylint = "^2.8.2"
 black = "^21.4b2"
+isort = "^5.8.0"
+autoflake = "^1.4"
+pre-commit = "^2.12.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+# https://github.com/psf/black/blob/master/docs/compatible_configs.md
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 100
+
+[tool.pylint.messages_control]
+# C0330 and C0301 are disabled for use of black
+disable = """C0330, C0301,
+duplicate-code, attribute-defined-outside-init, missing-module-docstring, missing-class-docstring,
+no-member, invalid-name, import-outside-toplevel, unused-argument, too-many-ancestors, missing-function-docstring,
+too-few-public-methods, no-self-use, too-many-arguments, cyclic-import, inconsistent-return-statements,
+useless-object-inheritance, logging-fstring-interpolation
+"""
+
+[tool.pylint.format]
+max-line-length = "100"
