--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ isort = "^5.8.0"
 autoflake = "^1.4"
 pre-commit = "^2.12.1"
 
+[tool.poetry.extras]
+pgsql = ["psycopg2"]
+mysql = ["mysqlclient"]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
