--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ bleach = "^3.3.0"
 Markdown = "^3.3.4"
 wagtail-localize = "^0.9.5"
 html2text = "^2020.1.16"
+mozilla-django-oidc = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.8.2"
