Finish OIDC setup
Co-authored-by: jeriox <jeriox@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,5 @@ EMAIL_URL=dummymail://
 DEFAULT_FROM_EMAIL=webmaster@localhost
 SERVER_EMAIL=root@localhost
 ADMINS=Root User <root@localhost.dev>
+OIDC_RP_CLIENT_ID=id
+OIDC_RP_CLIENT_SECRET=secret
