--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,21 +60,30 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: Gr1N/setup-poetry@v4
-    - uses: actions/cache@v1
-      with:
-        path: ~/.cache/pypoetry/virtualenvs
-        key: myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-        restore-keys: |
-          myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-
+    #- uses: Gr1N/setup-poetry@v4
+    #- uses: actions/cache@v1
+    #  with:
+    #    path: ~/.cache/pypoetry/virtualenvs
+    #    key: myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
+    #    restore-keys: |
+    #      myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-
+    - name: Setup python venv and poetry
+      run: |
+        #sudo apt-get install python-venv
+        python -m venv env
+        source env/bin/activate
+        pip install poetry
     - name: Install dependencies
       # always install all -E extras to use a single cache
       run: |
         sudo apt-get install gettext
+        source env/bin/activate
         poetry install -E mysql -E pgsql
     - name: Prepare files for test run
+      continue-on-error: true
       run: |
         cp .env.example .env
+        source env/bin/activate
         poetry run python manage.py compilemessages --settings myhpi.settings
         poetry run python manage.py collectstatic --settings myhpi.settings
 
@@ -96,9 +105,13 @@ jobs:
     - name: Test apps
       env:
         DATABASE_URL: ${{ matrix.database_url }}
-      run: poetry run coverage run --source=myhpi -m pytest tests/
+      run: |
+        source env/bin/activate
+        poetry run coverage run --source=myhpi -m pytest tests/
     - name: Coveralls
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: poetry run coveralls
+      run: |
+        source env/bin/activate
+        poetry run coveralls
       if: matrix.python-version == '3.9' && matrix.database == 'sqlite'
