--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ black = "^22.3"
 isort = "^5.8.0"
 autoflake = "^1.4"
 pre-commit = "^2.12.1"
+pytest = "^7.1.2"
+coverage = "^6.3.2"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2"]
