--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,10 +17,16 @@ mozilla-django-oidc = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.8.2"
-black = "^21.4b2"
+black = "^22.3"
 isort = "^5.8.0"
 autoflake = "^1.4"
 pre-commit = "^2.12.1"
+pytest = "^7.1.2"
+coverage = "^6.3.2"
+
+[tool.poetry.extras]
+pgsql = ["psycopg2"]
+mysql = ["mysqlclient"]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
