--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ Markdown = "^3.3.7"
 wagtail-localize = "^1.1.2"
 html2text = "^2020.1.16"
 mozilla-django-oidc = "^2.0.0"
+django-compressor = "^4.0"
+django-libsass = "^0.9"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.8.2"
