--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,11 +7,11 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-wagtail = "^2.12.3"
+wagtail = ">=2.16.2"
 django-environ = "^0.4.5"
-bleach = "^3.3.0"
-Markdown = "^3.3.4"
-wagtail-localize = "^0.9.5"
+bleach = "^5.0.0"
+Markdown = "^3.3.7"
+wagtail-localize = "^1.1.2"
 html2text = "^2020.1.16"
 mozilla-django-oidc = "^2.0.0"
 
