--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.8"
 wagtail = ">=2.16.2"
 django-environ = "^0.4.5"
-bleach = "^5.0.0"
+bleach = {extras = ["css"], version = "^5.0.0"}
 Markdown = "^3.3.7"
 wagtail-localize = "^1.1.2"
 html2text = "^2020.1.16"
