Remove localsettings references

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,15 @@ SERVER_EMAIL=root@localhost
 ADMINS=Root User <root@localhost.dev>
 OIDC_RP_CLIENT_ID=id
 OIDC_RP_CLIENT_SECRET=secret
+
+ENABLE_MAILING_LISTS=False
+TENCA_API_HOST=lists.myhpi.de
+TENCA_API_PORT=8425
+TENCA_API_SCHEME=https
+TENCA_ADMIN_USER=test
+TENCA_ADMIN_PASS=test
+TENCA_LIST_HASH_ID_SALT=salt_here
+TENCA_WEB_UI_HOSTNAME=lists.myhpi.de
+TENCA_DISABLE_GOODBYE_MESSAGES=True
+TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionHashStorage
+TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
