--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ mozilla-django-oidc = "^2.0.0"
 django-compressor = "^4.0"
 django-libsass = "^0.9"
 django-bootstrap-icons = "^0.7.8"
+django-select2 = "^7.10.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.3"
