Fix dependency errors
minor code style adjustments

added environment variable for django debug tools

migration fixes

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 SECRET_KEY=&lmx#ngmhed!#t$olcee^h@x3ixta=&gux+2u+fqqtb2l4mge(
 DEBUG=True
+DJANGO_DEBUG=False
 DATABASE_URL=sqlite:///db.sqlite3
 ALLOWED_HOSTS="*"
 STATIC_URL=/static/
