--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ pgsql = ["psycopg2"]
 mysql = ["mysqlclient"]
 
 [build-system]
-requires = ["setuptools", "poetry-core>=1.0.0"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.black]
