--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,15 +9,13 @@ license = "MIT"
 python = "^3.8"
 wagtail = ">=2.16.2"
 django-environ = "^0.9.0"
-bleach = {extras = ["css"], version = "^5.0.1"}
-Markdown = "^3.3.7"
 wagtail-localize = "^1.2"
-html2text = "^2020.1.16"
 mozilla-django-oidc = "^2.0.0"
 django-compressor = "^4.0"
 django-libsass = "^0.9"
 django-bootstrap-icons = "^0.7.8"
 django-select2 = "^7.10.0"
+wagtail-markdown = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.4"
