--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -14,6 +14,7 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
+          username: $
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
