--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -14,7 +14,8 @@ jobs:
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
-          username: $
+          registry: ghcr.io
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
         name: Build and push
