add gh workflow to build docker container

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -22,4 +22,4 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ghcr.io/fsr-de/myHPI:latest
+          tags: ghcr.io/fsr-de/myhpi:latest
