--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -24,6 +24,8 @@ jobs:
         key: myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
         restore-keys: |
           myHPI-${{ runner.os }}-poetry-py${{ matrix.python-version }}-
+    - name: Install setuptools
+      run: poetry run python -m pip install setuptools
     - name: Install dependencies
       run: poetry install
     - name: check format with black
