--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,13 +73,12 @@ jobs:
         python -m venv env
         source env/bin/activate
         pip install poetry
-    - name: Install setuptools
-      run: poetry run python -m pip install setuptools
     - name: Install dependencies
       # always install all -E extras to use a single cache
       run: |
         sudo apt-get install gettext
         source env/bin/activate
+        poetry run python -m pip install setuptools
         poetry install -E mysql -E pgsql
     - name: Prepare files for test run
       continue-on-error: true
