--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,7 @@ jobs:
       run: |
         sudo apt-get install gettext
         source env/bin/activate
-        poetry run python -m pip install setuptools
+        poetry run python -m pip install setuptools -U
         poetry install -E mysql -E pgsql
     - name: Prepare files for test run
       continue-on-error: true
