--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-debug-toolbar = "^3.5.0"
 django-permissionedforms = "^0.1"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.9.0"
+autoflake = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.5"
