--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -100,7 +100,7 @@ jobs:
     - name: Setup postgres dependency
       run: |
         source env/bin/activate
-        poetry add psycopg2
+        poetry run python -m pip install psycopg2
       if: matrix.database == 'postgres'
 
     - name: Setup mysql
