--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,8 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - uses: Gr1N/setup-poetry@v4
+    - name: Install poetry
+      run: curl -sSL https://install.python-poetry.org | python3 -
     - uses: actions/cache@v1
       with:
         path: ~/.cache/pypoetry/virtualenvs
@@ -71,7 +72,7 @@ jobs:
         #sudo apt-get install python-venv
         python -m venv env
         source env/bin/activate
-        pip install poetry
+        curl -sSL https://install.python-poetry.org | python3 -
     - name: Install dependencies
       # always install all -E extras to use a single cache
       run: |
