--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 100
+skip_gitignore = true
 
 [tool.pylint.messages_control]
 # C0330 and C0301 are disabled for use of black
