--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -78,7 +78,8 @@ jobs:
       run: |
         sudo apt-get install gettext
         source env/bin/activate
-        poetry install -E pgsql
+        poetry run python -m pip install setuptools -U
+        poetry install -E mysql -E pgsql
         python install-bootstrap.py
     - name: Prepare files for test run
       continue-on-error: true
@@ -100,7 +101,7 @@ jobs:
     - name: Setup postgres dependency
       run: |
         source env/bin/activate
-        poetry add psycopg2
+        poetry run python -m pip install psycopg2
       if: matrix.database == 'postgres'
 
     #- name: Migrate db
