--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,7 @@ license = "MIT"
 python = "^3.8"
 wagtail = ">=2.16.2"
 django-environ = "^0.9.0"
-bleach = {extras = ["css"], version = "^5.0.1"}
-Markdown = "3.3.7"
 wagtail-localize = "^1.2"
-html2text = "^2020.1.16"
 mozilla-django-oidc = "^2.0.0"
 django-bootstrap-icons = "^0.8.1"
 django-select2 = "^7.10.0"
@@ -20,6 +17,9 @@ django-static-precompiler = {extras = ["libsass"], version = "^2.1"}
 django-debug-toolbar = "^3.5.0"
 django-permissionedforms = "^0.1"
 tenca = "^0.0.2"
+html2text = "^2020.1.16"
+wagtail-markdown = "^0.9.0"
+autoflake = "^1.5.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.14.5"
