add pretix integration

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ TENCA_WEB_UI_HOSTNAME=lists.myhpi.de
 TENCA_DISABLE_GOODBYE_MESSAGES=True
 TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionHashStorage
 TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
+
+ENABLE_VOUCHERS=False
+PRETIX_BASE_URL=https://pretix.myhpi.de
+PRETIX_API_TOKEN=abc
