--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tenca = "^0.0.2"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.10.0"
 autoflake = "^1.7.7"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 pylint = "^2.15.5"
