--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,12 +7,19 @@ services:
          - static_volume:/app/data/static/
        expose:
            - 8000
+       depends_on:
+         - postgres
    postgres:
        image: postgres:14-alpine
        volumes:
            - postgres_data:/var/lib/postgresql/data/
        env_file:
           - .env
+       healthcheck:
+         test: [ "CMD-SHELL", "pg_isready" ]
+         interval: 10s
+         timeout: 5s
+         retries: 5
    nginx:
      build: ./deployment/nginx
      volumes:
