--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
 SECRET_KEY=&lmx#ngmhed!#t$olcee^h@x3ixta=&gux+2u+fqqtb2l4mge(
 DEBUG=True
 DJANGO_DEBUG=False
-DATABASE_URL=sqlite:///db.sqlite3
 ALLOWED_HOSTS="*"
 STATIC_URL=/static/
 STATIC_ROOT=data/static/
@@ -15,6 +14,10 @@ SERVER_EMAIL=root@localhost
 ADMINS=Root User <root@localhost.dev>
 OIDC_RP_CLIENT_ID=id
 OIDC_RP_CLIENT_SECRET=secret
+POSTGRES_USER=myhpi
+POSTGRES_PASSWORD=myhpi
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 
 ENABLE_MAILING_LISTS=False
 TENCA_API_HOST=lists.myhpi.de
