Update settings for mail and logging

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ MEDIA_URL=/media/
 MEDIA_ROOT=data/media/
 INTERNAL_IPS=["127.0.0.1","localhost"]
 SITE_URL=http://localhost:8000
-EMAIL_URL=dummymail://
+EMAIL_URL=smtp://
 DEFAULT_FROM_EMAIL=webmaster@localhost
 SERVER_EMAIL=root@localhost
 ADMINS=Root User <root@localhost.dev>
