Use env file for anonymous IP range and support multiple admins

--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ TENCA_WEB_UI_HOSTNAME=lists.myhpi.de
 TENCA_DISABLE_GOODBYE_MESSAGES=True
 TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionHashStorage
 TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
+
+ANONYMOUS_IP_RANGE=127.0.0.1
+ANONYMOUS_IP_RANGE_GROUP_NAME=Moderators
