add DeepL configuration to settings

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ POSTGRES_USER=myhpi
 POSTGRES_PASSWORD=myhpi
 POSTGRES_HOST=postgres
 POSTGRES_PORT=5432
+DEEPL_API_KEY=secret
 
 ENABLE_MAILING_LISTS=False
 TENCA_API_HOST=lists.myhpi.de
