--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ html2text = "^2020.1.16"
 wagtail-markdown = "^0.10.0"
 autoflake = "^2.1.1"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pylint = "^2.17.4"
 black = "^23.3"
 isort = "^5.12.0"
