--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-wagtail = ">=2.16.2"
+wagtail = "^4.2.4"
 django-environ = "^0.10.0"
 wagtail-localize = "^1.4"
 mozilla-django-oidc = "^3.0.0"
