--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ django-environ = "^0.10.0"
 wagtail-localize = "^1.4"
 mozilla-django-oidc = "^3.0.0"
 django-bootstrap-icons = "^0.8.3"
-django-select2 = "^8.1.2"
 django-static-precompiler = {extras = ["libsass"], version = "^2.4"}
 django-debug-toolbar = "^4.2.0"
 django-permissionedforms = "^0.1"
@@ -20,6 +19,7 @@ tenca = "^0.0.2"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.10.0"
 autoflake = "^2.2.1"
+django-tomselect = "^0.4.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.5"
