--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ tenca = "^0.0.2"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.11.1"
 autoflake = "^2.2.1"
+setuptools-scm = "^8.0.4"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.17.5"
