--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license = "MIT"
 python = "^3.8"
 wagtail = "^5.2"
 django-environ = "^0.10.0"
-wagtail-localize = "1.7rc1"
+wagtail-localize = "^1.7"
 mozilla-django-oidc = "^3.0.0"
 django-bootstrap-icons = "^0.8.3"
 django-select2 = "^8.1.2"
