Add dynamic versioning and version in footer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "myHPI"
-version = "0.1.0"
+version = "0.0.0" # automatically set by poetry-dynamic-versioning
 description = ""
 authors = ["FSR DE <fachschaftsrat@hpi.de>"]
 license = "MIT"
@@ -36,8 +36,8 @@ pgsql = ["psycopg2"]
 mysql = ["mysqlclient"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
+build-backend = "poetry_dynamic_versioning.backend"
 
 [tool.black]
 line-length = 100
@@ -63,3 +63,6 @@ useless-object-inheritance, logging-fstring-interpolation
 
 [tool.pylint.format]
 max-line-length = "100"
+
+[tool.poetry-dynamic-versioning]
+enable = true
