--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ html2text = "^2020.1.16"
 wagtail-markdown = "^0.11.1"
 autoflake = "^2.2.1"
 setuptools-scm = "^8.0.4"
+django-prometheus = "^2.3.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.0.3"
