Skip dependabot for image uploads

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   docker:
     runs-on: ubuntu-latest
+    if: ${{ github.triggering_actor != 'dependabot[bot]' }}
     steps:
       -
         name: Login to DockerHub
