--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -4,21 +4,31 @@ on:
   push:
     branches:
       - 'main'
+    tags:
+      - 'v*'
 
 jobs:
   docker:
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     if: ${{ github.triggering_actor != 'dependabot[bot]' }}
     steps:
-      -
-        name: Login to DockerHub
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/fsr-de/myhpi
+
+      - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build and push
+
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
