Add tags from meta to docker push action

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -32,4 +32,5 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
-          tags: ghcr.io/fsr-de/myhpi:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
