--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -15,6 +15,9 @@ jobs:
       contents: read
     if: ${{ github.triggering_actor != 'dependabot[bot]' }}
     steps:
+      - name: Checkout # Checkout the repository to allow for dynamic versioning
+        uses: actions/checkout@v4
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
