--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -3,7 +3,7 @@ name: build-container
 on:
   push:
     branches:
-      - 'main'
+      - 'docker-image-workflow-fix'
     tags:
       - 'v*'
 
@@ -17,6 +17,7 @@ jobs:
     steps:
       - name: Checkout # Checkout the repository to allow for dynamic versioning
         uses: actions/checkout@v4
+
 
       - name: Docker meta
         id: meta
@@ -34,6 +35,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
