Add checkout to docker build action for git context (#471)

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -15,6 +15,9 @@ jobs:
       contents: read
     if: ${{ github.triggering_actor != 'dependabot[bot]' }}
     steps:
+      - name: Checkout # Checkout the repository to allow for dynamic versioning
+        uses: actions/checkout@v4
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v5
@@ -31,6 +34,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
