--- a/.env.example
+++ b/.env.example
@@ -32,5 +32,4 @@ TENCA_DISABLE_GOODBYE_MESSAGES=True
 TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionHashStorage
 TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
 
-ANONYMOUS_IP_RANGE=127.0.0.1
-ANONYMOUS_IP_RANGE_GROUP_NAME=Moderators
+ANONYMOUS_IP_RANGE_GROUPS="127.0.0.1/32=Moderators,127.0.0.0/8=localhost"
