Automatically redirect to feed

--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,5 @@ TENCA_HASH_STORAGE_CLASS=myhpi.tenca_django.models.DjangoModelCachedDescriptionH
 TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
 
 ANONYMOUS_IP_RANGE_GROUPS="127.0.0.1/32=Moderators,127.0.0.0/8=localhost"
+REDIRECT_TO_FEED=True
+
