Add truncate limit to env file

--- a/.env.example
+++ b/.env.example
@@ -34,4 +34,4 @@ TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
 
 ANONYMOUS_IP_RANGE_GROUPS="127.0.0.1/32=Moderators,127.0.0.0/8=localhost"
 REDIRECT_TO_FEED=True
-
+FEED_TRUNCATE_LIMIT=400
