--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -73,22 +73,17 @@ jobs:
         python -m venv env
         source env/bin/activate
         curl -sSL https://install.python-poetry.org | python3 - --version 1.3.2
-    - name: Install dependencies
+    - name: Install dependencies and prepare files
       # always install all -E extras to use a single cache
       run: |
         sudo apt-get install gettext
         source env/bin/activate
         poetry run python -m pip install setuptools -U
         poetry install -E mysql -E pgsql
-        python tools/install_bootstrap.py
-    - name: Prepare files for test run
-      continue-on-error: true
-      run: |
         cp .env.example .env
-        source env/bin/activate
+        poetry run python manage.py install_bootstrap
         poetry run python manage.py compilemessages --settings myhpi.settings
         poetry run python manage.py collectstatic --settings myhpi.settings
-
     - name: Setup postgres
       uses: harmon758/postgresql-action@v1
       with:
