Remove action, create script to publish currently running version as post

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,4 @@ TENCA_TEST_LIST_DOMAIN=TENCA_WEB_UI_HOSTNAME
 ANONYMOUS_IP_RANGE_GROUPS="127.0.0.1/32=Moderators,127.0.0.0/8=localhost"
 REDIRECT_TO_FEED=True
 FEED_TRUNCATE_LIMIT=400
+RELEASE_POST_ACCOUNT_ID=2 # Will be 2 if the create test data script is used
