--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,8 +29,9 @@ black = "^24.8"
 isort = "^5.12.0"
 autoflake = "^2.2.1"
 pre-commit = "^3.8.0"
-pytest = "^8.3.2"
-coverage = "^7.6.1"
+pytest = "^8.2.2"
+coverage = "^7.6.0"
+djhtml = "^3.0.6"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2"]
