lint repository using pre-commit hook

--- a/.github/workflows/build-container.yml
+++ b/.github/workflows/build-container.yml
@@ -3,9 +3,9 @@ name: build-container
 on:
   push:
     branches:
-      - 'main'
+      - "main"
     tags:
-      - 'v*'
+      - "v*"
 
 jobs:
   docker:
