--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,16 +20,16 @@ repos:
     hooks:
       - id: black
   - repo: https://github.com/rtts/djhtml
-    rev: '3.0.6'
+    rev: "3.0.6"
     hooks:
       - id: djhtml
       - id: djcss
       - id: djjs
-  - repo: local
-    hooks:
-      - id: prettier-eslint
-        name: Prettier and ESLint
-        entry: prettier-eslint --write --list-different
-        language: node
-        types_or: [javascript, css, markdown, yaml]
-        additional_dependencies: ["prettier-eslint-cli@8.0.1"]
+#  - repo: local
+#    hooks:
+#      - id: prettier-eslint
+#        name: Prettier and ESLint
+#        entry: prettier-eslint --write --list-different
+#        language: node
+#        types_or: [javascript, css, markdown, yaml]
+#        additional_dependencies: ["prettier-eslint-cli@8.0.1"]
