--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,17 +19,17 @@ repos:
     rev: 24.4.2
     hooks:
       - id: black
-  - repo: https://github.com/rtts/djhtml
-    rev: "3.0.6"
+  - repo: https://github.com/djlint/djLint
+    rev: v1.34.1
     hooks:
-      - id: djhtml
-      - id: djcss
-      - id: djjs
-#  - repo: local
-#    hooks:
-#      - id: prettier-eslint
-#        name: Prettier and ESLint
-#        entry: prettier-eslint --write --list-different
-#        language: node
-#        types_or: [javascript, css, markdown, yaml]
-#        additional_dependencies: ["prettier-eslint-cli@8.0.1"]
+      - id: djlint-reformat-django
+        args: ["--quiet"]
+      - id: djlint-django
+  - repo: local
+    hooks:
+      - id: prettier-eslint
+        name: Prettier and ESLint
+        entry: prettier-eslint --write --list-different
+        language: node
+        types_or: [javascript, css, markdown, yaml]
+        additional_dependencies: ["prettier-eslint-cli@8.0.1"]
