--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ wagtail-markdown = "^0.12.1"
 autoflake = "^2.2.1"
 setuptools-scm = "^8.0.4"
 django-prometheus = "^2.3.1"
+djlint = "^1.34.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.2.6"
@@ -31,7 +32,6 @@ autoflake = "^2.2.1"
 pre-commit = "^3.8.0"
 pytest = "^8.2.2"
 coverage = "^7.6.0"
-djhtml = "^3.0.6"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2"]
@@ -68,3 +68,8 @@ max-line-length = "100"
 
 [tool.poetry-dynamic-versioning]
 enable = true
+
+[tool.djlint]
+ignore = "T002,T003,H006,H023,H031,H037"
+preserve_blank_lines = true
+custom_blocks = "blocktrans,cache"
