--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,19 +19,16 @@ django-permissionedforms = "^0.1"
 tenca = "^0.0.3"
 html2text = "^2020.1.16"
 wagtail-markdown = "^0.12.1"
-autoflake = "^2.2.1"
 setuptools-scm = "^8.0.4"
 django-prometheus = "^2.3.1"
-djlint = "^1.35.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.1"
-black = "^25.1"
-isort = "^5.12.0"
-autoflake = "^2.2.1"
 pre-commit = "^4.2.0"
 pytest = "^8.3.3"
 coverage = "^7.6.0"
+ruff = "^0.12.4"
+djlint = "^1.35.2"
 
 [tool.poetry.extras]
 pgsql = ["psycopg2"]
@@ -41,18 +38,11 @@ mysql = ["mysqlclient"]
 requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
 build-backend = "poetry_dynamic_versioning.backend"
 
-[tool.black]
+[tool.ruff]
 line-length = 100
-# https://github.com/psf/black/blob/master/docs/compatible_configs.md
 
-[tool.isort]
-multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-use_parentheses = true
-ensure_newline_before_comments = true
-line_length = 100
-skip_gitignore = true
+[tool.ruff.lint]
+ignore = ["F841"]
 
 [tool.pylint.messages_control]
 # C0330 and C0301 are disabled for use of black
